# HMI-codebase

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/music/lyrics/: Caramelldansen.lrc  Heat Waves.lrc  I Saw Your Face.lrc  Payphone.lrc  Shake It Off.lrc  Shree Hanuman Chalisa.lrc  Sugar.lrc  Tere Naino Main.lrc  The Less I Know The Better.lrc  The Real Slim Shady.lrc  Uptown Funk.lrc  Your New Boyfriend.lrc
backend/: BluetoothManager.cpp  BluetoothManager.h  DummyBluetoothManager.cpp  DummyBluetoothManager.h  LocalMusicPlayer.cpp  LocalMusicPlayer.h  SerialManager.cpp  SerialManager.h  SpotifyAPIManager.cpp  SpotifyAPIManager.h  TelemetryLogger.cpp  TelemetryLogger.h  TelemetryParser.cpp  TelemetryParser.h  TelemetrySimulator.cpp  TelemetrySimulator.h  VehicleData.cpp  VehicleData.h  WarningManager.cpp  WarningManager.h
config/: api_keys.json
docs/: architecture.md  backup dashboard.txt  telemtryAPI.md
qml/: AppShell.qml  Main.qml  main.qml
qml/components/: BaseCard.qml  BatteryGraphic.qml  DriveMode.qml  MetricTile.qml  PowertrainIcon.qml  Speedometer.qml  ThermalIcon.qml
qml/components/home-panels/: BatteryPanel.qml  DistancePanel.qml  DriveModePanel.qml  SpeedometerPanel.qml  SpeedometerPanel120.qml  SpeedometerPanel200.qml  SystemStatusPanel.qml  VehicleStatusPanel.qml
qml/pages/: DiagnosticsPage.qml  HomePage copy.qml  HomePage.qml  MusicPage.qml  SettingsPage.qml  SettingsPage2.qml
qml/pages/engineer/: CommsPage.qml  FaultsPage.qml  OverviewPage.qml  PowertrainPage.qml  TelemetryPage.qml  ThermalPage.qml
qml/themes/: Colors.qml  Fonts.qml  Strings.qml  Theme.qml  Typography.qml
scripts/: build.sh  clean.sh  run.sh
